examples/test/testpolicy4006.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4006
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key34: value28
      key42: value42
      key9: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value8
      podSelector:
        matchLabels:
          key21: value36
          key5: value19
          key39: value10
